<resources>

    <string name="app_name">Pescar</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Screen titles -->
    <string name="title_today">Today</string>
    <string name="title_archive">Archive</string>
    <string name="title_settings">Settings</string>

    <!-- Fishing activity details -->
    <string name="tow_1">Tow 1</string>
    <string name="tow_2">Tow 2</string>
    <string name="tow_3">Tow 3</string>
    <string name="tow_4">Tow 4</string>
    <string name="tow_5">Tow 5</string>
    <string name="tow_6">Tow 6</string>

    <string name="weight">Wt. (kg)</string>

    <string name="haul">Haul</string>

    <string name="shrimp">Shrimp</string>
    <string name="species_2">Species 2</string>
    <string name="species_3">Species 3</string>
    <string name="species_4">Species 4</string>
    <string name="species_5">Species 5</string>
    <string name="species_6">Species 6</string>

    <!-- Data submission -->
    <string name="confirm_submit_title">Confirm Submission</string>
    <string name="confirm_submit_message">Are you sure you want to submit data for this day? It can\'t be altered after
        this.
    </string>
    <string name="data_submission_success">Data successfully submitted to server.</string>
    <string name="data_submission_failure">Submission of data to server failed. Please try reauthorizing before attempting submission again.</string>

    <!-- Buttons -->
    <string name="submit">Submit</string>
    <string name="view_map">View Map</string>

    <!-- Tracking -->
    <string name="stopped_tracking_location">Stopped tracking location</string>

    <!-- Notifications -->
    <string name="tracking_notification_channel_name">Pescar Location Tracking</string>
    <string name="tracking_notification_title">Tracking location</string>
    <string name="tracking_notification_text">The Pescar app is tracking your location</string>

    <!-- Map -->
    <string name="title_activity_maps">Map</string>

    <!-- Archive -->
    <string name="title_activity_archive">Archive</string>

    <!-- Auth -->
    <string name="title_link">Link</string>
    <string name="title_activity_auth">Account Linking</string>
    <string name="please_authorize">Click the button below to link this app to an account on the server.</string>
    <string name="already_authorized">This app is linked to an account on the server. Click the button below to refresh the link if necessary.</string>

    <!-- Export -->
    <string name="export">Export all position data</string>
    <string name="export_explanation">Use the button below to export all position data collected by the app to a file on your device.</string>
    <string name="export_dialog_title">Data Exported</string>
    <string name="export_dialog_message">Position data has been exported to your Downloads folder. Would you like to email this file now?</string>
    <string name="email_now">Email now</string>
    <string name="cancel">Cancel</string>


    <!-- Keys - no localisation needed -->

    <item type="id" name="landed_id_key"/>
    <item type="id" name="species_id_key"/>

</resources>
